# madlib-cli

./: README.md  pyproject.toml
madlib_cli/: madlib.py
tests/: test_madlib.py
