[tool.poetry]
name = "madlib-cli"
version = "0.1.0"
description = ""
authors = ["santorsm <matt.santorsola@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = {version = "^21.6b0", allow-prereleases = true}
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
